@@ -2,5 +2,14 @@
 Простейшая многооконная программа на JavaFX (OpenJDK 11, linux)
 
 ![Screenshot](screenshot1.png)
-
 ![Screenshot](screenshot2.png)
+
+![Screenshot](screenshot3.png)
+
+![Screenshot](screenshot4.png)
+
+![Screenshot](screenshot5.png)
+
+```
+--module-path /snap/openjfx/current/sdk/lib --add-modules javafx.controls,javafx.fxml -Djava.library.path=/snap/openjfx/current/sdk/lib
+```
